# ember

./: .clang-format  .gitignore  .luarc.json  LICENSE  config.chariot  fab.lua  generate_img.sh  limine.conf  meson.build
include/common/: assert.h  tar.h  util.h
include/common/lock/: spinlock.h
include/cpu/: cpu.h  interrupts.h  lapic.h  port.h  registers.h
include/dev/: pci.h
include/fs/: vfs.h
include/lib/: list.h  math.h  string.h
include/memory/: heap.h  hhdm.h  pmm.h  vm.h
include/sys/: boot.h  stack_trace.h  time.h
init/: Makefile  init.c  init.elf
kernel/: entry.c  init.c  meson.build  ubsan.c
kernel/abi/: fcntl.h  seek_whence.h  termios.h
kernel/abi/syscall/: syscall.h
kernel/abi/sysv/: auxv.h  elf.c  elf.h  sysv.c  sysv.h
kernel/boot/: entry.c
kernel/common/: assert.h  log.c  log.h  modules.c  modules.h  panic.c  tar.c  types.h
kernel/common/lock/: mutex.c  mutex.h  spinlock.c  spinlock.h
kernel/cpu/: cpu.c  cpu.h  fpu.c  fpu.h  gdt.asm  gdt.c  gdt.h  interrupts.asm  interrupts.c  interrupts.h  io.asm  io.h  ioapic.c  ioapic.h  lapic.c  port.h  registers.h  tsc.c  tss.c  tss.h
kernel/dev/: acpi.c  acpi.h  hpet.c  keyboard.c  keyboard.h  pci.c  ps2kb.c  ps2kb.h  tty.c  tty.h
kernel/drivers/: ps2kb.c  ps2kb.h
kernel/events/: event.c  event.h
kernel/fs/: devfs.c  fd.c  fd.h  file.c  file.h  tmpfs.c  tmpfs.h  vfs.c  vfs.h  vnode.c  vnode.h
kernel/fs/devfs/: devfs.c  devfs.h
kernel/lib/: container.h  hash_table.c  hash_table.h  list.c  list.h  math.h  mem.c  mem.h  ref_count.h  ringbuf.c  ringbuf.h  string.c  string.h
kernel/memory/: heap.c  pmm.c  ptm.c  ptm.h  vm.c  vm.h
kernel/sched/: process.c  process.h  sched.asm  sched.c  sched.h  thread.c  thread.h
kernel/sys/: boot.h  entry.c  framebuffer.c  framebuffer.h  stack_trace.c  time.c  time.h
kernel/syscall/: syscall.asm  syscall.c  syscall.h
recipes/: aloe.chariot  ember.chariot  symfgen.chariot
subprojects/: cc-runtime.wrap  freestnd-c-hdrs.wrap  limine.wrap  nanoprintf.wrap  uacpi.wrap
support/: addr2line.py  chariot_clangd.py  chariot_utils.py  create_initrd.py  generate_img.sh  limine.conf  link_aloe.ld  link_ember.ld  meson_clang.ini  mkimg_aloe.toml  qemu.py
