sources += files(
    'entry.c',
    'init.c',
    'sys/stack_trace.c',
    'common/log.c',
    'common/panic.c',
    'common/lock/spinlock.c',
    'cpu/cpu.c',
    'cpu/gdt.c',
    'cpu/interrupts.c',
    'lib/string.c',
    'lib/mem.c',
    'lib/list.c',
    'memory/pmm.c',
    'memory/ptm.c',
    'memory/vm.c',
)

sources += files(
    'cpu/gdt.asm',
    'cpu/interrupts.asm'
)