sources += files(
    'entry.c',
    'init.c',
    'sys/stack_trace.c',
    'sys/time.c',
    'common/log.c',
    'common/panic.c',
    'common/lock/spinlock.c',
    'cpu/cpu.c',
    'cpu/gdt.c',
    'cpu/interrupts.c',
    'lib/string.c',
    'lib/mem.c',
    'lib/list.c',
    'memory/pmm.c',
    'memory/ptm.c',
    'memory/vm.c',
    'memory/heap.c',
    'dev/acpi.c',
)

sources += files(
    'cpu/gdt.asm',
    'cpu/interrupts.asm'
)